k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegismind-service
  namespace: default
  labels:
    app: aegismind-sre-engine
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: aegismind-sre-engine
